--- a/plantsuwa/app/views/layouts/admin_layout.html.erb
+++ b/plantsuwa/app/views/layouts/admin_layout.html.erb
@@ -16,7 +16,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <%= stylesheet_link_tag  "application", media: "all" %>
-    <%= stylesheet_link_tag  "admin-pages", media: "all" %>
+    <%= stylesheet_link_tag  "admin-pages_white", media: "all" %>
   	<!-- Google Fonts -->
   	<link href='http://fonts.googleapis.com/css?family=Montserrat|Oxygen|Noto+Sans|Nunito' rel='stylesheet' type='text/css'>
   </head>
