--- a/plantsuwa/app/views/layouts/ui/_action_tab_edit_small.html.erb
+++ b/plantsuwa/app/views/layouts/ui/_action_tab_edit_small.html.erb
@@ -2,7 +2,7 @@
 	<div class="action-tab" style="width: 33.333333%; left: 33.333333%">
 	  <div class="center-wrapper">
 	    <div style="display: inline-block;">
-	      <p><i class="fa fa-edit" style="color: #009DFF"></i>&nbsp;&nbsp;Edit plant</p>
+	      <p><i class="fa fa-edit"></i>&nbsp;&nbsp;Edit plant</p>
 	    </div>
 	  </div>
 	</div>
