--- a/plantsuwa/app/views/layouts/ui/_action_tab_new.html.erb
+++ b/plantsuwa/app/views/layouts/ui/_action_tab_new.html.erb
@@ -3,7 +3,7 @@
 	  <div class="action-tab" style="left: 50%">
 	    <div class="center-wrapper">
 	      <div style="display: inline-block;">
-	        <p><i class="fa fa-tree" style="color: #00FF2F"></i></span>&nbsp;&nbsp;New plant</p>
+	        <p><i class="fa fa-tree"></i></span>&nbsp;&nbsp;New plant</p>
 	      </div>
 	    </div>
 	  </div>
