--- a/plantsuwa/app/assets/stylesheets/custom_black.css
+++ b/plantsuwa/app/assets/stylesheets/custom_black.css
@@ -22,60 +22,6 @@ hr {
 }
 
 
-h1, h2, h3, h4, h5, h6, th, legend {
-	font-family: 'Montserrat', sans-serif;
-}
-
-
-p, div, td, label, dd, dt {
-	font-family: 'Oxygen', sans-serif;
-}
-
-p {
-  text-align: justify;
-  text-justify: inter-word;
-}
-
-b {
-	font-family: "Courier";
-	#font-size: 1.2em;
-}
-
-
-
-.main { 
-	padding: 25px;
-}
-
-.well {
-	padding-top: 0px;
-}
-
-.img-rounded {
-	border-radius: 5px;
-}
-
-.img-padded {
-	margin: 5px 0px;
-}
-
-
-.scrollbar-area {
-	overflow-y: scroll;
-}
-
-th {
-	position: sticky;
-}
-
-tr {
-	height: 10px;
-	border-top: 2px;
-}
-
-td {
-	padding: 10px;
-}
 
 
 
@@ -93,17 +39,8 @@ td {
   background: -moz-linear-gradient(#DDDDDD, white, #DDDDDD); /* For Firefox 3.6 to 15 */
   background: linear-gradient(#DDDDDD, white, #DDDDDD); /* Standard syntax */
 
-
-
 }
 
-.navbar-brand-custom {
-  margin-right: 5px;
-  float: right;
-  padding-left: 5px;
-  padding-right: 1px;
-  margin-top: -2px;
-}
 
 
 a {
@@ -128,29 +65,7 @@ td > a {
 }
 
 
-.img-trans {
-	opacity: 0.7;
-}
 
-.img-trans:hover, .bottom-nav-control p:hover {
-	opacity: 1;
-	transition: opacity 0.2s;
-}
-
-
-
-label {
-  margin-top: 15px;
-}
-
-.help-block p {
-  margin-bottom: 0px;
-}
-
-
-textarea {
-  resize: vertical;
-}
 
 .alert.alert-info {
   background: #FFA81C;
@@ -158,10 +73,7 @@ textarea {
   color: black;
 }
 
-.fieldset-search-form .check_boxes > .controls {
-  height: auto;
-  overflow: hidden;
-}
+
 
 .fieldset-search-form {
   background: #111;
@@ -228,18 +140,7 @@ textarea {
 
 
 
-.info-tab-33 {
-  width: 33.3333333%;
-  min-width: 93.333333333px;
-}
 
-.info-tab-disabled {
-
-}
-
-.info-tab-disabled:hover {
-  cursor: not-allowed;
-}
 
 .info-tab p {
 	font-family: 'Montserrat', sans-serif;
@@ -252,32 +153,7 @@ textarea {
 	color: #ccc;
 }
 
-.center-wrapper {
-  display: table;
-  margin: 0 auto;
-}
 
-.center-wrapper-inner {
-  display: inline-block; 
-}
-
-.center-wrapper-inner > * {
-  text-align: center;
-}
-
-
-.info-body {
-  min-height: 100px;
-}
-
-.info-body p {
-  margin-left: 10px;
-  margin-bottom: 20px;
-}
-
-.info-body .help-block {
-  margin-bottom: 0;
-}
 
 
 
@@ -296,17 +172,12 @@ textarea {
   left: 0;
 }
 
-.action-tab:hover {
-  cursor: pointer;
-}
+
 
 .action-tab p {
   color: white;
 }
 
-.padding-mobile {
-  padding: 0 10px;
-}
 
 .help-inline {
   color: rgb(169, 68, 66);
@@ -314,36 +185,7 @@ textarea {
 
 
 
-.check_boxes > .controls {
-  padding: 0 15px;
-  /*  padding-bottom: 5px; */
-  /* border: 1px solid #ccc; */
-  /* border-radius: 4px; */
-  height: 120px;
-  overflow-y: scroll;
-  background-color: #222;
-  border-radius: 3px;
-}
 
-.check_boxes .checkbox {
-  font-size: small;
-  font-weight: 400;
-  font-family: 'Oxygen', sans-serif;
-}
-
-.check_boxes.optional.form-control {
-	height: 15px;
-}
-
-label.checkbox {
-  padding-left: 10px;
-}
-
-.checkbox input[type="checkbox"] {
-  /*margin-left: -18px;*/
-  margin-top: 0;
-  /*float: left;*/
-}
 
 input {
   color: white;
@@ -410,52 +252,23 @@ input {
 }
 */
 
-.form-photo-box {
-  border: 1px solid #333;
-  padding: 5px;
-  margin-bottom: 10px;
-}
+
 
 .photo-box-display {
   border: 1px solid #FF9A26;
 }
 
-.btn-welcome {
-  width: 80%;
-  margin: 0 10%;
-  padding: 20px 0;
-  font-size: medium;
-	font-family: 'Montserrat', sans-serif;
-
-}
-
-
 
 .search {
-  width: 100%;
-  margin: 0 10%;
-  padding: 20px ;
-  font-size: medium;
-	font-family: 'Montserrat', sans-serif;
   background: #111;
 }
 
-.search-bar-container {
-  width: 100%;
-  margin: 0;
-}
-
 .dropdown-checkboxes {
-  display: none;
   border: 1px solid #333;
   background: white;
-  border-top: 0;
 }
 
 .btn-searchlist {
-  border-radius: 0;
-  margin-top: 5px;
-  position: relative;
   background: #FFE9D1;
   border-color: #FFDFBA;
 }
@@ -465,26 +278,7 @@ input {
   border-color: #FFDCB3;  
 }
 
-.btn-searchlist-down:after, .btn-searchlist-up:after {
-  font-family: FontAwesome;
-  font-size: 12px;
-  position: absolute;
-  right: 6px;
-  top: 7px; 
-}
 
-.btn-searchlist-down:after {
-  content: "\f078";
-}
-
-.btn-searchlist-up:after {
-  content: "\f077";
-}
-
-
-.legend-center-aligned {
-  text-align: center;
-}
 
 legend {
   border-color: #222;
@@ -492,13 +286,7 @@ legend {
 }
 
 .plant-index-box {
-  width: 100%;
-  height: 64px;
   border-top: 1px solid #222;
-  position: relative;
-	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
-	box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
 .plant-index-box p, .plant-index-box-chevron {
@@ -510,66 +298,16 @@ p.plant-text-container {
 }
 
 .plant-index-box-photo {
-  width: 64px;
-  height: 64px;
   border-right: 1px solid #333;
-	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
-	box-sizing: border-box;         /* Opera/IE 8+ */
-  position: absolute;
-  left: 0;
-  top: 0;
-
-}
-.plant-index-box-content {
-  height: 44px;
-  width: 100%;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 8px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
-.plant-index-box-content-wrapper {
-  width: 100%;
-  padding-left: 50px;
-  padding-right: 50px;
-}
-
-.plant-index-box-chevron {
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 64px;
-  width: 44px;
-  padding-top: 18px;
-  padding-left: 12px;
-  font-size: large;
-}
 
 .plant-index-tab {
-  width: 100%;
-  height: 24px;
-  padding: 4px 0;
-  z-index: 1000;
   border-bottom: 1px solid #ccc;
   background: #FFF8D9;
-  position: fixed;
-  top: 50px;
-  overflow: hidden;
 }
 
-.plant-index-tab p {
-	font-family: 'Montserrat', sans-serif;
-  font-size: small;
-} 
-
 .plant-text-container {
-  text-align: center;
-  margin-bottom: 0px;
-  font-size: 120%;
   color: white;
 }
 
@@ -577,142 +315,52 @@ p.plant-text-container {
   color: #555;
 }
 
-.navbar-collapse :hover {
-  -webkit-transition: color 0.2s linear;
-  -moz-transition: color 0.2s linear;
-  -ms-transition: color 0.2s linear;
-  -o-transition: color 0.2s linear;
-  transition: color 0.2s linear;
-}
 
-.navbar-title-block {
-  margin-bottom: 0px;
-  margin-left: -10px;
-  font-size: small;
-  width: 100%;
-  left: 0;
-}
 
 .navbar-title-block p {
-  position: absolute;
-  right: 25px;
-  text-align: center;
   color: black;
-  width: 100%;
 }
 
-.navbar-prev-page-block {
-  margin-bottom: 0px;
-  font-size: small;
-  margin-left: -10px;
-  position: absolute;
-  left: 0;
-  width: auto;
-  padding-right: 0;
-  z-index: 1100;
-}
 
-.navbar-uwacrest-block {
-  margin-left: -10px;
-  width: 80px;
-  position: absolute;
-  left: 0;
-}
 
 .navbar-admin-tab {
-  width: 120px;
-  height: 30px;
   background: #DDDDDD;
   color: black;
-  position: fixed;
-  right: 2%;
-  top: 50px;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
-  z-index: 1050;
 }
+
 .navbar-admin-tab p, .sort-by-tab p {
   color: black;
-  text-align: center;
-  font-size: x-small;
-  margin-top: 6px;
-  font-family: 'Montserrat', sans-serif; 
 }
+
 
 .navbar-admin-tab:hover p, .sort-by-tab:hover p {
   color: #FF9A26;
-  -webkit-transition: color 0.2s linear;
-  -moz-transition: color 0.2s linear;
-  -ms-transition: color 0.2s linear;
-  -o-transition: color 0.2s linear;
-  transition: color 0.2s linear;
 }
 
 .navbar-admin-tab:active p, .sort-by-tab:active p {
   color: #FF9A26;
-  -webkit-transition: color 0.2s linear;
-  -moz-transition: color 0.2s linear;
-  -ms-transition: color 0.2s linear;
-  -o-transition: color 0.2s linear;
-  transition: color 0.2s linear;
 }
 
 
 
 .navbar-admin-tab:before {
-  left: -30px;
   background: url('tab-corner-left-white-1.png');
 }
 
 .navbar-admin-tab:after {
-  right: -30px;
-  top: 0;
   background: url('tab-corner-right-white-1.png');
 }
 
-.navbar-admin-tab:before, .navbar-admin-tab:after {
-  position: absolute;
-  display: block;
-  content: "";
-  width: 30px;
-  height: 30px;  
-  background-size: 30px 30px;
-  background-repeat: no-repeat;  
-}
-
-
-.navbar-admin-tab a {
-  text-decoration: none; 
-}
-
-.navbar-nav > li.logout {
-  padding: 15px;
-}
-
-.navbar-nav > li > a.logout {
-  display: inline;
-  padding: 15px 0;
-}
 
 .navbar-inverse .navbar-nav > li  {
   color: rgb(119, 119, 119);
 }
 
 .display-photo-right {
-  float: right;
-  margin-left: 10px;
   border: 1px solid #222;
-  max-width: 50%;
-  max-height: 50%;
 }
 
 .colour-circle {
-  float: left;
-  margin-top: 2px;
-  margin-right: 8px;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
   background: white;
 }
 
@@ -720,19 +368,6 @@ p.plant-text-container {
 
 
 
-table, .table > tbody > tr > td, .table > thead > tr > th, .table-responsive {
-  border: 0;  
-
-}
-
-.table > tbody > tr > td {
-  vertical-align: middle;
-}
-
-.table-striped>tbody>tr:nth-child(even)>td, 
-.table-striped>tbody>tr:nth-child(even)>th {
-  background: none;
- }
 
 
 
@@ -741,15 +376,6 @@ table, .table > tbody > tr > td, .table > thead > tr > th, .table-responsive {
   background: #222;
  }
 
-tr:nth-child(odd) td:first-child {
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
-
-tr:nth-child(odd) td:last-child {
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
 
 
 
@@ -832,176 +458,15 @@ tr:nth-child(odd) td:last-child {
 
 
 .index-banner {
-  position: fixed;
-  width: 100%;
-  left: 0;
-  top: 50px;
-  height: 30px;
   background: #222;
-  z-index: 1002;
   border-bottom: 1px solid #333;
 }
 
-
-.favourite-form {
-
-  margin-top: -8px;
-  float: right;
-}
-
-.favourite-form a, a:hover {
-  text-decoration: none;
+div.dropdown-checkboxes {
+  border-color: #222;
 }
 
 
-
-.slideshow{
-  position: relative;
-  display: block;
-  overflow: hidden;
-}
-
-figure{
-  position: absolute;
-  opacity: 0;
-  transition: 0.4s opacity;
-}
-
-figcaption{
-  position: absolute;
-  font-family: font-family: 'Oxygen', sans-serif;
-  font-size: .8em;
-  left: 0;
-  bottom: 0;
-  padding: .25em;
-  color: white;
-  background: rgba(0,0,0, .7);
-  width: 100%;
-}
-
-
-.fig-item-number {
-  color: white;
-  background: black;
-  padding: .25em 15px;
-
-
-}
-
-figcaption a{
-  color: #fff;
-}
-
-figure.show {
-  opacity: 1;
-  position: static;
-  transition: 0.4s opacity;
-}
-
-
-.ss-next, .ss-prev{
-  color: #fff;
-  position: absolute;
-  top: 50%;
-  z-index: 1;
-  font-size: 40px;
-  margin-top: -.75em;
-  opacity: .75;
-  user-select: none;
-}
-
-.ss-next:hover, .ss-prev:hover{
-  cursor: pointer;
-  opacity: 1;
-}
-
-.ss-next{
-  right: 0;
-  padding: 10px 5px 15px 10px;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-.ss-prev{
-  left: 0;
-  padding: 10px 10px 15px 5px;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  top: 100;
-}
-
-
-
-.kw-search-box {
-  width: 67%;
-  float: left;
-}
-
-.kw-search-box-inner {
-  border-bottom-right-radius: 0px;
-  border-top-right-radius: 0px;
-}
-
-.kw-search-button {
-  border-bottom-left-radius: 0px;
-  border-top-left-radius: 0px;
-}
-
-.dropdown-checkboxes {
-  border: 1px solid white;
-}
-
-
-
-/* Media Queries */
-
-@media (max-width: 768px) {
-  .over-768 {
-    display: none;  
-  }
-}
-
-
-@media (min-width: 300px) {
-  body {
-    overflow-x: hidden;
-  }
-}
-
-@media (max-width: 400px) {
-  .navbar p > strong {
-    font-size: 90%;
-  }
-
-  .th-shrink, .td-shrink {
-    width: 30px !important;
-  }
-
-  .over-400 {
-    display: none;
-  }
-
-}
-
-
-@media (min-width: 768px) {
-  .navbar-right {
-    position: fixed;
-    right: 90px;
-  }
-  .navbar-brand {
-    margin-left: -10px !important;
-  }
-  .navbar-brand-custom {
-    padding-left: 18px !important;    
-  }
-
-  .navbar-title-block p {
-      right: 200px;
-  }
-  .under-768 {
-    display: none;
-  }
-}
 
 
 
@@ -1011,60 +476,29 @@ figure.show {
 
 /* NEW THINGS, AFTER THE STYLE CHANGE */
 
-.action-tab-100 {
-  width: 100%;
-}
 
 /* In media queries, navbar p should be navbar p>strong */
 
-.feedback-welcome {
-  max-width: 400px;
-  margin: 0 auto;
-  padding-bottom: 15px;
-}
 
-.feedback-welcome p {
-  text-align: center;
-}
+
 
 .feedback-welcome-heading {
-  text-align: center;
   color: #FFA81C;
 }
 
-.contact-us-heading {
-  margin-bottom: 35px;
-}
 
 .feedback-welcome-container {
   background: #111;
-  margin-top: -20px;
-  padding-top: 20px;
-  margin-bottom: 50px;
 }
 
 .thanks-for-visiting-container {
   background: #111;
-  margin-top: -40px;
-  padding-top: 40px;
 }
 
-ul.sources-list > li {
-  display: inline-block;
-  margin-right: 20px;
-}
 
-p.help-block.kwsearch {
-  margin-bottom: 0px;
-}
 
-h3.or-block {
-  margin-left: 45%;
-  margin-right: 45%;
-  background: rgb(10, 10, 10); 
-  text-align: center;
-  margin-top: -35px;
-}
+
+
 
 label.checkbox {
   color: white;
@@ -1087,5 +521,4 @@ label.checkbox {
 
 .navbar-inverse .navbar-brand {
   color: black;
-  font-weight: 700;
 }
