--- a/plantsuwa/app/assets/stylesheets/custom_shared.css
+++ b/plantsuwa/app/assets/stylesheets/custom_shared.css
@@ -1,26 +1,3 @@
-body, .navbar {
-  min-width: 280px;
-  background: #ddd;  
-}
-
-body {
-  height: 100%;
-}
-
-hr {
-  border-color: #ddd;
-}
-
-.container {
-  background: white;
-  height: 100%;
-  padding: 0;
-  height: 100%;
-  box-shadow: 4px 0 10px #ccc, -4px 0 10px #ccc;
-  min-height: 100vh;
-}
-
-
 h1, h2, h3, h4, h5, h6, th, legend {
 	font-family: 'Montserrat', sans-serif;
 }
@@ -76,22 +53,6 @@ td {
 	padding: 10px;
 }
 
-
-
-
-
-.navbar-inverse {
-	background: black;
-
-  background: -moz-linear-gradient(top, #2E2E2E 0%, black);
-  background: -webkit-gradient(linear, left top, left bottom, from(#2E2E2E), to(black));
-  background: -o-linear-gradient(top, #2E2E2E 0%, black);
-  background: -linear-gradient(top, #2E2E2E 0%, black);
-
-	border-radius: 0px;
-	border: 15px;
-}
-
 .navbar-brand-custom {
   margin-right: 5px;
   float: right;
@@ -99,25 +60,6 @@ td {
   padding-right: 1px;
   margin-top: -2px;
 }
-
-
-a {
-	color: #474747;
-}
-
-
-
-
-
-.bottom-nav-control p {
-	color: white;
-	opacity: 0.7;
-}
-
-.bottom-nav-control h3 {
-	color: white;
-}
-
 
 .img-trans {
 	opacity: 0.7;
@@ -148,70 +90,10 @@ textarea {
   overflow: hidden;
 }
 
-.fieldset-search-form {
-  background: #eee;
-  border-radius: 10px;
-  width: 90%;
-  margin: 0 5%;
-  padding: 20px;
+.fieldset-search-form .check_boxes > .controls {
+  height: auto;
+  overflow: hidden;
 }
-
-.info-tab {
-  width: 25%;
-
-  float: left;
-  padding: 0 7px;
-  padding-top: 9px;
-  border-right: 1px solid #222;
-  background: #eee;
-  position: fixed;
-  bottom: 0;
-  height: 40px;
-
-  background: black;
-
-  background: -webkit-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(#2E2E2E, black, black, #2E2E2E); /* Standard syntax */
-
-}
-
-.info-tab:hover {
-  cursor: pointer;
-
-  background: #2E2E2E;
-
-  -webkit-transition: background 0.2s linear;
-  -moz-transition: background 0.2s linear;
-  -ms-transition: background 0.2s linear;
-  -o-transition: background 0.2s linear;
-  transition: background 0.2s linear;
-
-  background: -webkit-linear-gradient(#363636, #111111, #111111, #363636); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#363636, #111111, #111111, #363636); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#363636, #111111, #111111, #363636); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#363636, #111111, #111111, #363636); /* Standard syntax */
-
-}
-
-.info-tab-current, .info-tab-current:hover {
-
-  background: #268BFF;
-
-  -moz-transition: none;
-  -webkit-transition: none;
-  -o-transition: color 0 ease-in;
-  transition: none;
-
-  background: -webkit-linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* Standard syntax */
-
-}
-
-
 
 .info-tab-33 {
   width: 33.3333333%;
@@ -224,17 +106,6 @@ textarea {
 
 .info-tab-disabled:hover {
   cursor: not-allowed;
-}
-
-.info-tab p {
-	font-family: 'Montserrat', sans-serif;
-  text-align: center;
-  font-size: small;
-  color: white;
-}
-
-.info-tab-disabled p {
-	color: #333;
 }
 
 .center-wrapper {
@@ -264,23 +135,6 @@ textarea {
   margin-bottom: 0;
 }
 
-
-
-
-.action-tab {
-  width: 50%;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-  float: left;
-  padding: 3px 5px;
-  border-right: 1px solid #ccc;
-  background: #eee;
-  position: fixed;
-  height: 30px;
-  bottom: 40px;
-  left: 0;
-}
-
 .action-tab:hover {
   cursor: pointer;
 }
@@ -290,12 +144,6 @@ textarea {
   padding: 0 10px;
 }
 
-.help-inline {
-  color: rgb(169, 68, 66);
-}
-
-
-
 .check_boxes > .controls {
   padding: 0 15px;
   /*  padding-bottom: 5px; */
@@ -303,12 +151,20 @@ textarea {
   /* border-radius: 4px; */
   height: 120px;
   overflow-y: scroll;
+  background-color: #222;
+  border-radius: 3px;
 }
+
+
 
 .check_boxes .checkbox {
   font-size: small;
   font-weight: 400;
-	font-family: 'Oxygen', sans-serif;
+  font-family: 'Oxygen', sans-serif;
+}
+
+.check_boxes.optional.form-control {
+	height: 15px;
 }
 
 label.checkbox {
@@ -321,33 +177,10 @@ label.checkbox {
   /*float: left;*/
 }
 
-
-
-/*
-.checkbox-container {
-  display: inline-block;
-  background: red;
-  vertical-align: -1px;
-  margin: 5px;
-}
-
-.checkbox-container input {
-  display: inline;
-}
-
-.checkbox-container .collection_checkboxes {
-  display: inline;
-}
-*/
-
 .form-photo-box {
-  border: 1px solid #ccc;
+  border: 1px solid #333;
   padding: 5px;
   margin-bottom: 10px;
-}
-
-.photo-box-display {
-  border: 1px solid #268BFF;
 }
 
 .btn-welcome {
@@ -356,7 +189,6 @@ label.checkbox {
   padding: 20px 0;
   font-size: medium;
 	font-family: 'Montserrat', sans-serif;
-  background: #eee;
 }
 
 .search {
@@ -365,7 +197,6 @@ label.checkbox {
   padding: 20px ;
   font-size: medium;
 	font-family: 'Montserrat', sans-serif;
-  background: #eee;
 }
 
 .search-bar-container {
@@ -375,22 +206,14 @@ label.checkbox {
 
 .dropdown-checkboxes {
   display: none;
-  border: 1px solid #ccc;
-  background: white;
   border-top: 0;
 }
+
 
 .btn-searchlist {
   border-radius: 0;
   margin-top: 5px;
   position: relative;
-  background: #D1E7FF;
-  border-color: #BADAFF;
-}
-
-.btn-searchlist:hover, .btn-searchlist:active {
-  background: #BADAFF;
-  border-color: #B3D6FF;  
 }
 
 .btn-searchlist-down:after, .btn-searchlist-up:after {
@@ -414,14 +237,9 @@ label.checkbox {
   text-align: center;
 }
 
-legend {
-  border-color: #ddd;
-}
-
 .plant-index-box {
   width: 100%;
   height: 64px;
-  border-top: 1px solid #ccc;
   position: relative;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
@@ -431,7 +249,7 @@ legend {
 .plant-index-box-photo {
   width: 64px;
   height: 64px;
-  border-right: 1px solid #ccc;
+  border-right: 1px solid #333;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
@@ -473,8 +291,6 @@ legend {
   height: 24px;
   padding: 4px 0;
   z-index: 1000;
-  border-bottom: 1px solid #ccc;
-  background: #FFF8D9;
   position: fixed;
   top: 50px;
   overflow: hidden;
@@ -491,10 +307,6 @@ legend {
   font-size: 120%;
 }
 
-.navbar-brand {
-  color: #bbb;
-}
-
 .navbar-collapse :hover {
   -webkit-transition: color 0.2s linear;
   -moz-transition: color 0.2s linear;
@@ -502,6 +314,7 @@ legend {
   -o-transition: color 0.2s linear;
   transition: color 0.2s linear;
 }
+
 
 .navbar-title-block {
   margin-bottom: 0px;
@@ -511,11 +324,11 @@ legend {
   left: 0;
 }
 
+
 .navbar-title-block p {
   position: absolute;
   right: 25px;
   text-align: center;
-  color: white;
   width: 100%;
 }
 
@@ -537,11 +350,11 @@ legend {
   left: 0;
 }
 
+
+
 .navbar-admin-tab {
   width: 120px;
   height: 30px;
-  background: black;
-  color: white;
   position: fixed;
   right: 2%;
   top: 50px;
@@ -549,16 +362,16 @@ legend {
   border-bottom-right-radius: 8px;
   z-index: 1050;
 }
+
 .navbar-admin-tab p, .sort-by-tab p {
-  color: white;
   text-align: center;
   font-size: x-small;
   margin-top: 6px;
   font-family: 'Montserrat', sans-serif; 
 }
 
+
 .navbar-admin-tab:hover p, .sort-by-tab:hover p {
-  color: #268BFF;
   -webkit-transition: color 0.2s linear;
   -moz-transition: color 0.2s linear;
   -ms-transition: color 0.2s linear;
@@ -567,7 +380,6 @@ legend {
 }
 
 .navbar-admin-tab:active p, .sort-by-tab:active p {
-  color: #268BFF;
   -webkit-transition: color 0.2s linear;
   -moz-transition: color 0.2s linear;
   -ms-transition: color 0.2s linear;
@@ -576,16 +388,13 @@ legend {
 }
 
 
-
 .navbar-admin-tab:before {
   left: -30px;
-  background: url('tab-corner-left-2.png');
 }
 
 .navbar-admin-tab:after {
   right: -30px;
   top: 0;
-  background: url('tab-corner-right-4.png');
 }
 
 .navbar-admin-tab:before, .navbar-admin-tab:after {
@@ -612,14 +421,10 @@ legend {
   padding: 15px 0;
 }
 
-.navbar-inverse .navbar-nav > li  {
-  color: rgb(119, 119, 119);
-}
 
 .display-photo-right {
   float: right;
   margin-left: 10px;
-  border: 1px solid #ccc;
   max-width: 50%;
   max-height: 50%;
 }
@@ -631,15 +436,13 @@ legend {
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background: white;
 }
-
-
 
 
 
 table, .table > tbody > tr > td, .table > thead > tr > th, .table-responsive {
   border: 0;  
+
 }
 
 .table > tbody > tr > td {
@@ -649,12 +452,8 @@ table, .table > tbody > tr > td, .table > thead > tr > th, .table-responsive {
 .table-striped>tbody>tr:nth-child(even)>td, 
 .table-striped>tbody>tr:nth-child(even)>th {
   background: none;
- }
+}
 
-.table-striped>tbody>tr:nth-child(odd)>td, 
-.table-striped>tbody>tr:nth-child(odd)>th {
-  background: #eee;
- }
 
 tr:nth-child(odd) td:first-child {
   border-top-left-radius: 10px;
@@ -669,92 +468,11 @@ tr:nth-child(odd) td:last-child {
 
 
 
-/* Sort tab */
-
-/*
-
-.sort-by-tab {
-  width: 70px;
-  height: 30px;
-  background: black;
-  color: white;
-  position: fixed;
-  left: 10px;
-  top: 50px;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
-  z-index: 1050;
-}
-
-.sort-by-tab p {
-  color: white;
-  text-align: center;
-  font-size: small;
-  margin-top: 6px;
-  font-family: 'Montserrat', sans-serif; 
-}
-
-.sort-by-tab-current {
-  background: #ccc;
-  z-index: 1060;  
-}
-
-.sort-by-tab-current p {
-  color: black;
-}
-
-
-.sort-by-tab:before {
-  left: -30px;
-  background: url('tab-corner-left-2.png');
-}
-
-.sort-by-tab:after {
-  right: -30px;
-  top: 0;
-  background: url('tab-corner-right-4.png');
-}
-
-.sort-by-tab-current:before {
-  left: -30px;
-  background: url('tab-corner-left-2.png');
-}
-
-.sort-by-tab-current:after {
-  right: -30px;
-  top: 0;
-  background: url('tab-corner-right-4.png');
-}
-
-
-
-.sort-by-tab:before, .sort-by-tab:after {
-  position: absolute;
-  display: block;
-  content: "";
-  width: 30px;
-  height: 30px;  
-  background-size: 30px 30px;
-  background-repeat: no-repeat;  
-}
-
-
-.sort-by-tab a {
-  text-decoration: none; 
-}
-
-*/
 
 
 .index-banner {
-  position: fixed;
-  width: 100%;
-  left: 0;
-  top: 50px;
-  height: 30px;
-  background: #ddd;
-  z-index: 1002;
-  border-bottom: 1px solid #ccc;
+  background: #222;
+  border-bottom: 1px solid #333;
 }
 
 
@@ -767,6 +485,7 @@ tr:nth-child(odd) td:last-child {
 .favourite-form a, a:hover {
   text-decoration: none;
 }
+
 
 
 
@@ -845,8 +564,82 @@ figure.show {
 }
 
 
+.kw-search-box {
+  width: 67%;
+  float: left;
+}
+
+.kw-search-box-inner {
+  border-bottom-right-radius: 0px;
+  border-top-right-radius: 0px;
+}
+
+.kw-search-button {
+  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
+}
+
+.dropdown-checkboxes {
+  border: 1px solid white;
+}
+
+.navbar-inverse .navbar-brand {
+  font-weight: 700;
+}
 
 
+
+ul.sources-list > li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+p.help-block.kwsearch {
+  margin-bottom: 0px;
+}
+
+h3.or-block {
+  margin-left: 45%;
+  margin-right: 45%;
+  background: rgb(10, 10, 10); 
+  text-align: center;
+  margin-top: -35px;
+}
+
+
+.thanks-for-visiting-container {
+  margin-top: -40px;
+  padding-top: 40px;
+}
+
+
+.feedback-welcome-container {
+  margin-top: -20px;
+  padding-top: 20px;
+  margin-bottom: 50px;
+}
+
+.contact-us-heading {
+  margin-bottom: 35px;
+}
+
+.feedback-welcome-heading {
+  text-align: center;
+}
+
+.feedback-welcome p {
+  text-align: center;
+}
+
+.feedback-welcome {
+  max-width: 400px;
+  margin: 0 auto;
+  padding-bottom: 15px;
+}
+
+.action-tab-100 {
+  width: 100%;
+}
 
 
 
@@ -903,80 +696,4 @@ figure.show {
   .under-768 {
     display: none;
   }
-}
-
-
-
-
-
-
-
-
-
-
-/* New */
-
-.action-tab-100 {
-  width: 100%;
-}
-
-.feedback-welcome {
-  max-width: 400px;
-  margin: 0 auto;
-  padding-bottom: 15px;
-}
-
-.feedback-welcome p {
-  text-align: center;
-}
-
-.feedback-welcome-heading {
-  text-align: center;
-  color: #1C73FF;
-}
-
-.contact-us-heading {
-  margin-bottom: 35px;
-}
-
-.feedback-welcome-container {
-  background: #eee;
-  margin-top: -20px;
-  padding-top: 20px;
-  margin-bottom: 50px;
-}
-
-.thanks-for-visiting-container {
-  background: #eee;
-  margin-top: -40px;
-  padding-top: 40px;
-}
-
-ul.sources-list > li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-p.help-block.kwsearch {
-  margin-bottom: 0px;
-}
-
-h3.or-block {
-  margin-left: 45%;
-  margin-right: 45%;
-  background: white; 
-  text-align: center;
-  margin-top: -35px;
-}
-
-.btn-orange {
-  border-color: #D6880B;
-  background: #EB9100;
-  color: white;
-}
-
-.btn-orange:hover, .btn-orange:focus {
-  background: #FFA81C;
-  border-color: #EB9100;
-  color: white;
 }
