--- a/plantsuwa/app/views/current_plants/_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_form.html.erb
@@ -32,7 +32,7 @@
         	<%= f.input  :identification, hint: 'How is this plant identified in the field?', as: :text  %> 
         	<%= f.input  :physical, hint: 'What are the physical characteristics of the plant?', as: :text %>
 		      <%= f.association :sizes, :as => :check_boxes %>
-		      <%= f.association :flower_colours, :as => :check_boxes %>
+		      <!--<%= f.association :flower_colours, :as => :check_boxes %>-->
 		      <%= f.association :leaf_colours, :as => :check_boxes %>
       </fieldset>
     </div>
@@ -46,7 +46,7 @@
       	  <%= f.input  :horticulture, as: :text %>
       	  <%= f.input  :architectural_uses, as: :text %>
 	        <%= f.input  :architectural_info, as: :text %>
-		      <%= f.association :soil_types, :as => :check_boxes %>
+		      <!--<%= f.association :soil_types, :as => :check_boxes %>-->
       </fieldset>
     </div>
     
