--- a/plantsuwa/app/assets/stylesheets/custom_shared.css
+++ b/plantsuwa/app/assets/stylesheets/custom_shared.css
@@ -249,7 +249,6 @@ label.checkbox {
 .plant-index-box-photo {
   width: 64px;
   height: 64px;
-  border-right: 1px solid #333;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
@@ -466,14 +465,17 @@ tr:nth-child(odd) td:last-child {
 }
 
 
-
-
-
-
 .index-banner {
-  background: #222;
-  border-bottom: 1px solid #333;
+	position: fixed;
+	width: 100%;
+	left: 0;
+	top: 50px;
+	height: 30px;
+	z-index: 1002;
 }
+
+
+
 
 
 .favourite-form {
@@ -601,7 +603,6 @@ p.help-block.kwsearch {
 h3.or-block {
   margin-left: 45%;
   margin-right: 45%;
-  background: rgb(10, 10, 10); 
   text-align: center;
   margin-top: -35px;
 }
