--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -18,10 +18,12 @@
 	<div class="center-wrapper">
   	<div class="center-wrapper-inner">
   		<br/>
-			<dt><%= pluralize(@results_count, 'plant') %> found.</dt>
+			<span><%= pluralize(@results_count, 'plant') %> found.</span>
+			
 		</div>
 	</div>
 	<div style="height: 10px"></div>
+	
 	
 	<!--
 	<div class="center-wrapper">
