made it so you can only select one type in the param search (via jquery)

--- a/plantsuwa/app/views/current_plants/_search_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_search_form.html.erb
@@ -156,4 +156,19 @@
   		element.removeClass("btn-searchlist-up");  		
   	}
 	}
+
+
+
+
+	$("#type-list input:checkbox").click(function() {
+    if ($(this).is(":checked")) {
+        var group = "input:checkbox[name='" + $(this).attr("name") + "']";
+        $(group).prop("checked", false);
+        $(this).prop("checked", true);
+    } else {
+        $(this).prop("checked", false);
+    }
+	});
+
+
 </script>
