--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -19,7 +19,7 @@
     
 
     <% if @current_plant.display_photo.exists? %>
-      <%= image_tag @current_plant.display_photo.url(:medium), class: 'display-photo-right' %>
+      <%= image_tag @current_plant.display_photo.url(:medium), class: 'display-photo-right', style: "max-width: 350px" %>
     <% end %>
     <% if not display_name(@current_plant).blank? %>
       <dt>Scientific Name</dt><p><i><%= display_name(@current_plant) %></i></p>
@@ -179,6 +179,7 @@
 		<% if not @current_plant.location_6.blank? %>
 			<p style="margin-bottom: 0px;"><%= @current_plant.location_6 %></p>
 		<% end %>
+    <br/>
     <% end %>
 	
 
